--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -123,6 +123,17 @@ Emulate the OUTeX intertext command using the (built-in) enumitem command.
 \end{solution}
 \total{3}
 
+\question{10}
+\begin{enumerate}
+  \item Subtotals can be calculated automatically using \verb!\subtotal*! 
+    or \verb!\subtotal*[comment]! \mk 2 
+  \item Totals can be calculated automatically using  \verb!\total*! 
+    or \verb!\total*[comment]! \mk 3
+\end{enumerate}
+\subtotal*
+\bigskip
+\total*
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cma*{41}[Covers Units C and D]
 
