--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,5 +1,5 @@
 \documentclass{ouexam} 
-% Available options:
+% Main available options:
 %  specimen			For specimen exam papers
 %  secondspecimen	For 2nd specimen exam
 %  showsolutions		Produces solution booklet
