--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -95,7 +95,7 @@ You can place longer remarks inside the longremark environment.
 
 \remark{Award no marks for this part of the question.}
 
-\item Marks with marginal comments. \solnmarksplus{40}{Method. Ignore all attempts at this question.}
+\item Marks with marginal comments. \marks[Method. Ignore all attempts at this question.]{40}
 
 \item The final part.\marks{3}
 
@@ -109,7 +109,7 @@ You can place longer remarks inside the longremark environment.
 
 \begin{enumerate}
 \item Marks can also be called using \mk 4
-\item Separate marks for accuracy and method.\mk{1A 2M}
+\item Formatting in marks: these don't get automatically summed.\mk[1A 2M]{\bf 3}
 \item 
 \begin{enumerate}
 \item Sub sub\mk 2
