--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -44,7 +44,7 @@
 suggestions go to \href{https://github.com/rbrignall/OU-SUPPS}%
 {\texttt{https://github.com/rbrignall/OU-SUPPS}}.}}
 
-\date{Version 1.33\\2016-09-14}
+\date{Version 1.4\\2016-09-16}
 
 \IfFileExists{enumitem.sty}{\usepackage{enumitem}}{}
 
@@ -495,21 +495,21 @@ For fuller details of the possibilities with |enumitem|, see the documentation o
 Marks can be placed anywhere in the document (including inside displayed equations). You may need to  compile your |tex| file twice in order for the marks to be correctly aligned. In |specsolns| mode, all the commands in this subsubsection are suppressed in the resulting PDF. In |studenttex| mode, all these commands are suppressed in the outputted |latex| source file.
 
 \begin{desc}
-|\marks{<n>}|
+|\marks[<description>]{<n>}|
 \end{desc}
-Places |<n>| in the right hand margin on the line. 
+Places |<n>| in the right hand margin on the line. The |<description>| (which could be a short sentence running to several lines) is placed to the right of the mark, but can be omitted (e.g. |\marks{5}|).
+
+\emph{Note:} |<n>| can be non-numeric, but if anything other than an integer is entered, then the |\subtotal*| and |\total*| commands will return the wrong sum.
 
 \emph{Warning:} This feature has redefined the \TeX\ primitive |\marks| command. 
 
 \begin{desc}
-|\mk{<n>}|
+|\mk[<description>]{<n>}|\\
+|\solnmarksplus{<n>}{<description>}|\\
+|\mkplus{<n>}{<description>}|
 \end{desc}
-A synonym for |\marks|, for those moving from OUTeX.
+Some equivalent commands that produce the same effect as |\marks[<description>]{<n>}|. These exist primarily for backward-compatibility with OUTeX.
 
-\begin{desc}
-|\solnmarksplus{<description>}{<n>}|
-\end{desc}
-Place |<n>| in the right hand margin, and |<description>| (which could be a short sentence running to several lines) to the right of the mark.
 
 \begin{desc}
 |\subtotal[<description>]{<n>}|\\
